🐛 fix back button z-index

--- a/src/app/constellation-container/constellation-container.component.scss
+++ b/src/app/constellation-container/constellation-container.component.scss
@@ -41,6 +41,7 @@
       0 0 16px $primary;
     font-family: "OriginTech";
     opacity: 0.85;
+    z-index: 99;
 
     > * {
       pointer-events: none;
